# k8s_wfx

./: .gitignore  Cargo.toml  README.md  job.yaml  main.cpp
include/: wfxplugin.h
src/: consts.rs  helper.rs  iterator.rs  iterators.rs  lib.rs  main.rs  pods.rs  resources.rs  resoures.rs  shareddata.rs
src/iterators/: configs.rs  deployments.rs  dummy.rs  jobs.rs  namespaces.rs  nodes.rs  pods.rs  static_resource.rs
wfx_test/include/: Utilities.h  common.h  gendef.h
wfx_test/src/: k8s_wfx_test.cpp
