[package]
name = "k8s_wfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.85"
kube = { version = "0.76.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }

[build-dependencies]
cbindgen = "0.24.3"

[lib]
name         = "k8s_wfx"
crate-type   = ["cdylib"]

