[package]
name = "k8s_wfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.85"
kube = { version = "0.78.0", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
futures = "0.3"
anyhow = "1.0.44"
tokio = { version = "1.14.0", features = ["full"] }
tower = { version = "0.4.6", features = ["limit"] }
tower-http = { version = "0.3.2", features = ["trace", "decompression-gzip"] }
hyper = { version = "0.14.13", features = ["client", "http1", "stream", "tcp"] }

# [profile.dev]
# opt-level = 1

# [profile.release]
# opt-level = 3

[features]
default = ["openssl-tls", "rustls-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_26"]


# [build-dependencies]
# cbindgen = "0.24.3"

[lib]
name         = "k8s_wfx"
crate-type   = ["cdylib"]

# [[bin]]
# name = "k8s_bin"
# path = "src/main.rs"

