[package]
name = "k8s_wfx"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.98.0", default-features = false, features = [
    "client",
    "rustls-tls",
] }
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.96"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.5.1", features = ["limit"], optional = true }
hyper = { version = "0.14.32", features = ["client", "http1"], optional = true }
hyper-util = { version = "0.1.10", features=["client", "client-legacy", "http1", "tokio"], optional = true}

# [profile.dev]
# opt-level = 1

# [profile.release]
# opt-level = 3

[features]
default = [ "client" ]
    # "openssl-tls", "rustls-tls", "kubederive", "ws", "latest", "runtime", "hyper-util", "tower"]
client = ["openssl-tls", "rustls-tls", "kubederive", "ws", "latest", "runtime", "hyper-util", "tower"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_30"]


# [build-dependencies]
# cbindgen = "0.24.3"

[lib]
name = "k8s_wfx"
crate-type = ["cdylib"]

# [[bin]]
# name = "k8s_bin"
# path = "src/main.rs"
